--- a/desktop.css
+++ b/desktop.css
@@ -46,6 +46,9 @@
     width: 100%;
 }
 
+
+/* navbar design starts here */
+
 .nav-logo {
     text-align: left;
 }
@@ -64,3 +67,38 @@
     margin: 20px 0;
     background-color: transparent;
 }
+
+
+/* navbar design ends here */
+
+.profile .top-weather-icon {
+    right: 100px;
+    width: 140px;
+    transition: width 2s, transform 2s;
+}
+
+.profile .top-weather-icon:hover {
+    width: 160px;
+}
+
+.profile .bottom-weather-icon {
+    left: 140px;
+    bottom: 20px;
+    width: 140px;
+    transition: width 2s, transform 2s;
+}
+
+.profile .bottom-weather-icon:hover {
+    width: 160px;
+}
+
+.profile-desc p {
+    margin: 0 auto;
+    width: 50%;
+    color: gray;
+    text-align: center;
+    margin-bottom: -40px;
+}
+
+
+/* profile design starts here */
