--- a/style.css
+++ b/style.css
@@ -153,3 +153,121 @@ body {
 
 
 /* about me ends here */
+
+
+/* professional experience starts here */
+
+.professional-experience {
+    padding: 1% 2%;
+}
+
+.card-title h2 {
+    text-align: center;
+    background-color: #052d2f;
+    color: white;
+    padding: 10px;
+}
+
+.card {
+    background-color: #a39e9e;
+    padding: 10px;
+    border-radius: 10px;
+    transition: 0.3s;
+    height: 500px;
+}
+
+.card:hover {
+    box-shadow: 0 4px 8px 5px black;
+}
+
+.card-icon {
+    text-align: center;
+}
+
+.card-icon img {
+    margin-top: 10px;
+    border: 2px solid white;
+    border-radius: 50%;
+    padding: 10px;
+}
+
+.skills li {
+    list-style: none;
+    margin: 50px 0;
+    font-weight: bolder;
+    position: relative;
+}
+
+.skills li::before {
+    content: '';
+    position: absolute;
+    top: calc(100% + 5px);
+    width: 100%;
+    height: 10px;
+    background-color: rgb(86, 56, 153, .5);
+    border-radius: 10000px;
+}
+
+.skills li::after {
+    content: '';
+    position: absolute;
+    top: calc(100% + 5px);
+    left: 0;
+    width: 0;
+    height: 10px;
+    background-color: rgb(86, 56, 153, 1);
+    border-radius: 10000px;
+    animation-duration: 3s;
+    animation-delay: 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+.skills li.html::after {
+    animation-name: html;
+}
+
+@keyframes html {
+    to {
+        width: 90%;
+    }
+}
+
+.skills li.css::after {
+    animation-name: css;
+}
+
+@keyframes css {
+    to {
+        width: 60%;
+    }
+}
+
+.skills li.bootstrap::after {
+    animation-name: bootstrap;
+}
+
+@keyframes bootstrap {
+    to {
+        width: 70%;
+    }
+}
+
+.skills li.javascript::after {
+    animation-name: javascript;
+}
+
+@keyframes javascript {
+    to {
+        width: 50%;
+    }
+}
+
+.professional-experience::after {
+    content: '';
+    display: table;
+    clear: both;
+}
+
+
+/* professional experience endshere */
